--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".gopath/src/github.com/polydawn/refmt"]
 	path = .gopath/src/github.com/polydawn/refmt
 	url = https://github.com/polydawn/refmt
+[submodule ".gopath/src/github.com/google/skylark"]
+	path = .gopath/src/github.com/google/skylark
+	url = https://github.com/google/skylark
